@@ -105,6 +105,12 @@ album_cover_path in your site.conf.php to a directory that contains your
 covers, named according to rockbox' album art file naming conventions
 (see http://www.rockbox.org/wiki/AlbumArt for details).
 
+In case no cover art is found for an album, fookebox tries to be smart and
+assumes this is a compilation. The 'compliations_name' ('Various Artists' by
+default) determines what artist name is used for compilations. So if you want
+to provide a cover for a compilation called 'My Best Music', the corresponding
+covert art file would be called 'Various Artists-My Best Music.jpg'.
+
 Note that your covers need to be JPEG files and they will get scaled to
 a width of 100 pixels.
 
